app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require font-awesome
 *= require bootstrap-datepicker3

*/

@import "bootstrap-sprockets";
@import "bootstrap";

body {
  font-family: "Raleway", sans-serif;
}

.title {
  font-family: 'Pirata One', cursive;
  text-align: center;
  font-size: 8em;
}

.jumbotron {
    margin-bottom: 0px;
    background-image: url(../images/xmarksnew.jpeg);
    background-position: 0% 75%;
    background-size: cover;
    background-repeat: no-repeat;
    color: black;
}

.labelText {
  font-size: 1.5em;
}

.birthdayError {
  font-size: 1.5em;
  color: red;
}

.about:hover {
  color: blue;
}

